added price chart